--- a/pyequa/default_config.yaml
+++ b/pyequa/default_config.yaml
@@ -38,34 +38,24 @@ dataframe_type: csv  #csv or xlsx
 csv_separator: "," 
 csv_decimal: "." 
 
-
 author: author
 
-
-# challenge vs exam 
-gen_method: challenge
-
-# when gen_method is 'challenge'
-# number of variants of the same exercise model
-number_of_variants_per_exercise: 1 
-
-# when gen_method is 'exam' 
-number_of_given_vars: 1 
-
-# when gen_method is 'all'
-# TODO
 
 several_solutions: " (more than one solution; choose one) "
 global_tolerance: 0.001
 
-# output a knowledge graph
-output_knowledge_graph: false
-
 
 moodle_import_folder: imports
 
-variant_word: 'Variant'
+variant_word: Variant
+problem_word: Problem
 
 
+# Debug section
 
+# output a knowledge graph
+output_knowledge_graph: false
+
+# developer messages
+debug: false
 
